--- a/MobileSAMv2/ultralytics/yolo/cfg/default.yaml
+++ b/MobileSAMv2/ultralytics/yolo/cfg/default.yaml
@@ -77,6 +77,7 @@ simplify: False  # (bool) ONNX: simplify model
 opset:  # (int, optional) ONNX: opset version
 workspace: 4  # (int) TensorRT: workspace size (GB)
 nms: False  # (bool) CoreML: add NMS
+force_detect: False
 
 # Hyperparameters ------------------------------------------------------------------------------------------------------
 lr0: 0.01  # (float) initial learning rate (i.e. SGD=1E-2, Adam=1E-3)
